<resources>
    <string name="app_name">Meetly_Clone</string>
    <string name="login">Login</string>
    <string name="text_English">English</string>
    <string name="text_hint_Email">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="text_hint_Repassword">Re-Password</string>
    <string name="btn_text_Register">Register</string>
    <string name="text_register">Register</string>
    <string name="text_forget_pass">Forget password</string>
    <string name="text_Meetly">Meetly</string>
    <string name="text_btn_Loginwithfb">Login with facebook</string>
    <string name="text_btn_CreateAccount">Create Account</string>
    <string name="text_dontpost">We don\'t post anything to Facebook.</string>
    <string name="text_terms">By Signing in,You agree to our <b>Terms of Service</b> and <b>Privacy policy.</b> </string>
    <string name="text_Community">Community</string>
    <string name="text_CommunityGuidelines">Community Guidelines</string>
    <string name="text_SafetyTips">Safety Tips</string>
    <string name="text_Legal">Legal</string>
    <string name="text_PrivacyPolicy">Privacy Policy</string>
    <string name="text_Licenses">Licenses</string>
    <string name="text_Termsofservice">Terms of service</string>
    <string name="text_SelectLanguage">Select language</string>
    <string name="text_Logout">Logout</string>
    <string name="text_Deleteaccount">Delete account</string>
    <string name="text_AppSetting">App setting</string>
    <string name="tv_meetly">Meetly</string>
    <string name="et_english">English</string>
    <string name="tv_register">Register</string>
    <string name="et_email">E-mail</string>
    <string name="et_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="tv_forgetpassword">Forget Password</string>
    <string name="btn_login_with_facebook">Login with Facebook</string>
    <string name="tv_don_post">We don not post anything on facebook.</string>
    <string name="tv_by_syning">By signing in, you agree to our</string>
    <string name="tv_terms">Terms of Service</string>
    <string name="tv_policy">Privacy Policy</string>
    <string name="tv_and">and</string>
    <string name="et_name">Name</string>
    <string name="tv_this_is_how_appear_in_meetly">This is how appear in meetly</string>
    <string name="tv_enter_email">Please enter your email in order to recover your account later</string>
    <string name="et_dob">DD/MM/YYYY</string>
    <string name="tv_public_age">Your age will be public</string>
    <string name="et_gender">Your Gender</string>
    <string name="tv_cannot_change">You cannot change your gender after create account</string>
    <string name="tv_sign_up">Sign-Up</string>
    <string name="tv_login">Login</string>
    <string name="btn_create_account">Create Account</string>
    <string name="tv_term_of_service">Terms of Service</string>
    <string name="tv_forget_password">Forget Password</string>
    <string name="tv_hotmeet">hotmeet</string>
    <string name="et_repassword">Re-Password</string>
    <string name="btn_save">Save</string>
    <string name="tv_privacy_policy_information">
        Free Best Match App built the hotmeet app as a Free app. This SERVICE is provided by Free Best Match App at no cost and is intended for use as is.

This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.

If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at [hotmeet] unless otherwise defined in this Privacy Policy.

Information Collection and Use

For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.

The app does use third party services that may collect information used to identify you.

Link to privacy policy of third party service providers used by the app

Google Play Services
AdMob
Firebase Analytics
Firebase Crashlytics
Facebook
Log Data

I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.

Cookies

Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device is internal memory.

This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

Service Providers

I may employ third-party companies and individuals due to the following reasons:

To facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services; or
To assist us in analyzing how our Service is used.
I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

Security

I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.

Links to Other Sites

This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

Children’s Privacy

These Services do not address anyone under the age of 18. I do not knowingly collect personally identifiable information from children under 18. In the case I discover that a child under 18 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.

Changes to This Privacy Policy

I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.

Contact Us

If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at hotmeetdating@gmail.com.
    </string>
    <string name="get_premium_get_15_discount">Get Premium Get 15% Discount</string>
    <string name="tv_15">15%</string>
    <string name="tv_500_coin">500 coin</string>
    <string name="tv_rs_280_00">Rs 280.00</string>
    <string name="tv_buy_now">Buy Now</string>
    <string name="tv_2000_coin">2000 coin</string>
    <string name="tv_rs_1100_00">Rs 1100.00</string>
    <string name="tv_5000_coin">5000 coin</string>
    <string name="tv_rs_2200_00">Rs 2200.00</string>
    <string name="tv_8500_coin">8500 coin</string>
    <string name="tv_rs_3550_00">Rs 3550.00</string>
    <string name="tv_12500_coin">12500 coin</string>
    <string name="tv_rs_4900_00">Rs 4900.00</string>
    <string name="tv_35000_coin">35000 coin</string>
    <string name="tv_rs_11000_00">Rs 11000.00</string>
    <string name="tv_buy_coins">Buy Coins</string>
    <string name="tv_earn_free_coin">EARN FREE COINS</string>
    <string name="tv_0_coin">0 Coins</string>
    <string name="tv_unlock_feature_string">Coins unlock feature like extra begels and the ability to view mutual friend</string>
    <string name="tv_community_guideline">Community Guidelines</string>
    <string name="tv_welcome_to_hotmeet_community">Welcome to the hotmeet community.</string>
    <string name="tv_licence">Licenses</string>
</resources>