<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/logo_transperent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMeetlytitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/text_Meetly"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgIcon" />

    <TextView
        android:id="@+id/ddLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/text_English"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tvMeetlytitle"
        app:layout_constraintStart_toEndOf="@+id/tvMeetlytitle" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_30"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/form_input_field_design"
        android:hint="@string/text_hint_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMeetlytitle" />

    <EditText

        android:id="@+id/etPassword"
        style="@style/form_input_field_design"
        android:hint="@string/text_hint_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etRepassword"
        style="@style/form_input_field_design"
        android:hint="@string/text_hint_Repassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/tvRegisterbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_60"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@drawable/design_bg_createaccount_btn"
        android:text="@string/btn_text_Register"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/etRepassword" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_30"
        android:gravity="end"
        android:textStyle="bold"
        android:text="@string/text_forget_pass"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterbutton" />

    <TextView
        android:id="@+id/tvdontpost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/text_dontpost"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvterms" />

    <TextView
        android:id="@+id/tvterms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_30"
        android:gravity="center"
        android:text="@string/text_terms"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>