<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotpassActivity">

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_forget_password"
        android:textStyle="italic"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        android:padding="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_15" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_email"
        android:paddingStart="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/round_baground"
        android:layout_marginTop="@dimen/dp_100"
        app:layout_constraintTop_toBottomOf="@id/tv_forget_password" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_16"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:background="@drawable/pink_login_rectangle"
        android:layout_marginTop="@dimen/dp_30" />

</androidx.constraintlayout.widget.ConstraintLayout>